working on getting the images to load on the webpage

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_nasa = 'https://redplanetscience.com'\n",
+    "url_nasa = 'https://redplanetscience.com/'\n",
     "browser.visit(url_nasa)"
    ]
   },
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Title: NASA's Mars 2020 Comes Full Circle\n"
+      "Title: NASA's Perseverance Rover Will Peer Beneath Mars' Surface \n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Paragraph: Aiming to pinpoint the Martian vehicle's center of gravity, engineers took NASA's 2,300-pound Mars 2020 rover for a spin in the clean room at JPL. \n"
+      "Paragraph: The agency's newest rover will use the first ground-penetrating radar instrument on the Martian surface to help search for signs of past microbial life. \n"
      ]
     }
    ],
@@ -145,8 +145,8 @@
     {
      "data": {
       "text/plain": [
-       "{'Title': \"NASA's Mars 2020 Comes Full Circle\",\n",
-       " 'Paragraph': \"Aiming to pinpoint the Martian vehicle's center of gravity, engineers took NASA's 2,300-pound Mars 2020 rover for a spin in the clean room at JPL. \"}"
+       "{'Title': \"NASA's Perseverance Rover Will Peer Beneath Mars' Surface \",\n",
+       " 'Paragraph': \"The agency's newest rover will use the first ground-penetrating radar instrument on the Martian surface to help search for signs of past microbial life. \"}"
       ]
      },
      "execution_count": 9,
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://spaceimages-mars.com'\n",
+    "url = 'https://spaceimages-mars.com/'\n",
     "browser.visit(url)"
    ]
   },
@@ -863,7 +863,7 @@
    "outputs": [],
    "source": [
     "# URL\n",
-    "url_mars_hemispheres = \"https://marshemispheres.com\""
+    "url_mars_hemispheres = \"https://marshemispheres.com/\""
    ]
   },
   {
@@ -901,6 +901,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://marshemispheres.com/cerberus.html', 'https://marshemispheres.com/schiaparelli.html', 'https://marshemispheres.com/syrtis.html', 'https://marshemispheres.com/valles.html']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "['Cerberus Hemisphere Enhanced',\n",
@@ -915,51 +922,29 @@
     }
    ],
    "source": [
-    "list_hemispheres = []\n",
-    "for i in range(len(results)):\n",
-    "    list_hemispheres.append(results[i].a.h3.text)\n",
+    "# list_hemispheres = []\n",
+    "# for i in range(len(results)):\n",
+    "#     list_hemispheres.append(results[i].a.h3.text)\n",
     "\n",
-    "list_hemispheres"
+    "# list_hemispheres\n",
+    "\n",
+    "urls = []\n",
+    "titles = []\n",
+    "for item in results:\n",
+    "    urls.append(url_mars_hemispheres + item.find('a')['href'])\n",
+    "    titles.append(item.find('h3').text.strip())\n",
+    "print(urls)\n",
+    "titles"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mariamadiallo/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/splinter/driver/webdriver/__init__.py:520: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
-      "  FutureWarning,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hemisphere_image_urls = []\n",
-    "\n",
-    "# Create a list of dictionaries for each hemisphere\n",
-    "for i in range(len(list_hemispheres)):\n",
-    "\n",
-    "    # Use the browser to visit the url\n",
-    "    browser.click_link_by_partial_text(list_hemispheres[i])\n",
-    "    \n",
-    "    \n",
-    "    html = browser.html\n",
-    "    soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n",
-    "    \n",
-    "    results_new = soup.find_all('li')\n",
-    "\n",
-    "\n",
-    "    # Append the dictionary with the image url string and the hemisphere title to a list.\n",
-    "    for n in range(len(results_new)):\n",
-    "        if results_new[n].a.text == 'Sample':\n",
-    "            hemisphere_image_urls.append({\"title\": list_hemispheres[i].replace(\"Hemisphere Enhanced\", 'Hemisphere'), \"img_url\": results_new[0].a['href']})\n",
-    "            \n",
-    "    # Use the browser to visit the url\n",
-    "    browser.visit(url_mars_hemispheres)"
+    "#Find the image urls \n",
+    "img_result = soup.find_all('img')"
    ]
   },
   {
@@ -968,18 +953,131 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images/usgs_logo_main_2x.png\n",
+      "images/nasa-logo-web-med.png\n",
+      "images/astropedia-logo-main.png\n",
+      "images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\n",
+      "images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\n",
+      "images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\n",
+      "images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "for image in img_result:\n",
+    "    print(image['src'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "{'ListImages': [{'title': 'Cerberus Hemisphere', 'img_url': 'images/full.jpg'},\n",
-       "  {'title': 'Schiaparelli Hemisphere',\n",
-       "   'img_url': 'images/schiaparelli_enhanced-full.jpg'},\n",
-       "  {'title': 'Syrtis Major Hemisphere',\n",
-       "   'img_url': 'images/syrtis_major_enhanced-full.jpg'},\n",
-       "  {'title': 'Valles Marineris Hemisphere',\n",
-       "   'img_url': 'images/valles_marineris_enhanced-full.jpg'}]}"
+       "'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "browser.visit(urls[0])\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "image = url_mars_hemispheres+soup.find('img',class_='wide-image')['src']\n",
+    "image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg',\n",
+       " 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg',\n",
+       " 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg',\n",
+       " 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_urls = []\n",
+    "for image in urls:\n",
+    "    browser.visit(image)\n",
+    "    html = browser.html\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "#     savetofile(textfilename,soup.prettify())\n",
+    "    image = url_mars_hemispheres+soup.find('img',class_='wide-image')['src']\n",
+    "    img_urls.append(image)\n",
+    "    \n",
+    "img_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "for i in range(len(titles)):\n",
+    "    hemisphere_image_urls.append({'title':titles[i],'img_url':img_urls[i]})\n",
+    "\n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ListImages': [{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]}"
+      ]
+     },
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,26 +1109,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Title': \"NASA's Mars 2020 Comes Full Circle\",\n",
-       " 'Paragraph': \"Aiming to pinpoint the Martian vehicle's center of gravity, engineers took NASA's 2,300-pound Mars 2020 rover for a spin in the clean room at JPL. \",\n",
+       "{'Title': \"NASA's Perseverance Rover Will Peer Beneath Mars' Surface \",\n",
+       " 'Paragraph': \"The agency's newest rover will use the first ground-penetrating radar instrument on the Martian surface to help search for signs of past microbial life. \",\n",
        " 'featured_image_url': 'https://spaceimages-mars.com/image/featured/mars3.jpg',\n",
        " 'TableHTML': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Values</th>\\n    </tr>\\n    <tr>\\n      <th>Characteristics</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 ( Phobos &amp; Deimos )</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
-       " 'ListImages': [{'title': 'Cerberus Hemisphere', 'img_url': 'images/full.jpg'},\n",
-       "  {'title': 'Schiaparelli Hemisphere',\n",
-       "   'img_url': 'images/schiaparelli_enhanced-full.jpg'},\n",
-       "  {'title': 'Syrtis Major Hemisphere',\n",
-       "   'img_url': 'images/syrtis_major_enhanced-full.jpg'},\n",
-       "  {'title': 'Valles Marineris Hemisphere',\n",
-       "   'img_url': 'images/valles_marineris_enhanced-full.jpg'}]}"
+       " 'ListImages': [{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,16 +1172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7fda21cec388>"
+       "<pymongo.results.InsertManyResult at 0x7fc552ab7d88>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,26 +1196,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('62aa1ee69c9ad858b4e21404'),\n",
-       " 'Title': 'NASA Administrator Statement on Moon to Mars Initiative, FY 2021 Budget',\n",
-       " 'Paragraph': \"Jim Bridenstine addresses NASA's ambitious plans for the coming years, including Mars Sample Return.\",\n",
+       "{'_id': ObjectId('62accc18b4626460b739dbea'),\n",
+       " 'Title': \"NASA's Mars Helicopter Attached to Mars 2020 Rover \",\n",
+       " 'Paragraph': 'The helicopter will be first aircraft to perform flight tests on another planet.',\n",
+       " 'featured_image_url': 'https://spaceimages-mars.com/image/featured/mars3.jpg',\n",
        " 'TableHTML': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Values</th>\\n    </tr>\\n    <tr>\\n      <th>Characteristics</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 ( Phobos &amp; Deimos )</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
-       " 'ListImages': [{'title': 'Cerberus Hemisphere', 'img_url': 'images/full.jpg'},\n",
-       "  {'title': 'Schiaparelli Hemisphere',\n",
-       "   'img_url': 'images/schiaparelli_enhanced-full.jpg'},\n",
-       "  {'title': 'Syrtis Major Hemisphere',\n",
-       "   'img_url': 'images/syrtis_major_enhanced-full.jpg'},\n",
-       "  {'title': 'Valles Marineris Hemisphere',\n",
-       "   'img_url': 'images/valles_marineris_enhanced-full.jpg'}]}"
+       " 'ListImages': [{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       "  {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "   'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
